add add event button, start add event dialog

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
 
 
 <span class="app-action">
-  <button md-fab>
-    <md-icon>check plus</md-icon>
+  <button md-fab (click)="addEvent()">
+    <md-icon>add</md-icon>
   </button>
 </span>
